--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Joshua Walulik</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+        <!-- Font Awesome icons (free version) and Devicons-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
         <!-- Google fonts-->
@@ -52,8 +52,6 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/joshuawalulik/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/joshuawalulik"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -121,7 +119,7 @@
                             <h3 class="mb-0">Twitter Scrapping Project</h3>
                             <div class="subheading mb-3">Python</div>
                             <div>• Wrote code that analyses tweets through the integration of Twitter's API<br>• Presented a PowerPoint slide show ultilizing the Python program that displays word frequency, sentiment, and location analysis through geospacial data</div>
-                            <p>link</p>
+                            <p>link to github</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - November 2021</span></div>
                     </div>
@@ -129,8 +127,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Portfolio Website</h3>
                             <div class="subheading mb-3">HTML</div>
-                            <div>description</div>
-                            <p>more discription maybe link</p>
+                            <div>• Developed a website to display experience, interests, and skills<br>• Hosted through github</div>
+                            <p>link to github</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021</span></div>
                     </div>
@@ -159,7 +157,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            Agile Development
                         </li>
                     </ul>
                 </div>
@@ -169,8 +167,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a student, I enjoy most of my time doing actvities with friends. I enjoy hiking, camping and finding new places to eat.</p>
+                    <p class="mb-0">When  indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am a casual gamer, and I spend a large amount of my free time browsing the internet for new and exciting advancements in technology and business</p>
                 </div>
             </section>
             <hr class="m-0" />
