--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Portfolio Website</h3>
                             <div class="subheading mb-3">HTML</div>
-                            <div>• Developed a website to display experience, interests, and skills<br>• Hosted through github</div>
-                            <p>link to github</p>
+                            <div>• Developed a website to display experience, interests, and skills<br>• Hosted through <a href="https://github.com/joshuawalulik/Portfolio-Site">Github</a></div>
+                            
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021</span></div>
                     </div>
