--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <h3 class="mb-0">Twitter Scrapping Project</h3>
                             <div class="subheading mb-3">Python</div>
                             <div>• Wrote code that analyses tweets through the integration of Twitter's API<br>• Presented a PowerPoint slide show ultilizing the Python program that displays word frequency, sentiment, and location analysis through geospacial data</div>
-                            <p>link to <a href="https://github.com/joshuawalulik/Twitter-Scraper">GitHub</a></p>
+                            <p>• link to <a href="https://github.com/joshuawalulik/Twitter-Scraper">GitHub</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - November 2021</span></div>
                     </div>
