--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         1050 S Terrace Road · Tempe, AZ 85281 · (602) 586-6172 ·
                         <a href="mailto:name@email.com">jwalulik@asu.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a Computer Information Systems student at Arizona State University. I am planning on pursuing a career in data analytics or technology operations.</p>
+                    <p class="lead mb-5">I am a senior at Arizona State University studying Computer Information Systems. I am planning on pursuing a career in software engineering.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/joshuawalulik/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/joshuawalulik"><i class="fab fa-github"></i></a>
@@ -60,6 +60,14 @@
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Technology Intern Analyst</h3>
+                            <div class="subheading mb-3">Wells Fargo</div>
+                            <p>• Worked on a Scrum team for developing Java Web Service using Spring Framework and Mongo database<br>• Developed python scripts that reads from Mongo database and passes information to downstream application<br>• Fixed defects through JSP that improved business processes<br>• Utilized JUnit testing as part of TDD</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Fulfillment Specialist</h3>
