--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Walulik</span>
                     </h1>
                     <div class="subheading mb-5">
-                        1050 S Terrace Road · Tempe, AZ 85281 · (602) 586-6172 ·
+                        · Tempe · (602) 586-6172 ·
                         <a href="mailto:name@email.com">jwalulik@asu.edu</a>
                     </div>
                     <p class="lead mb-5">I am a senior at Arizona State University studying Computer Information Systems. I am planning on pursuing a career in software engineering.</p>
@@ -74,7 +74,7 @@
                             <div class="subheading mb-3">Target</div>
                             <p>• Helped customers with complaints and questions, while giving information and quality service to customers while they are shopping<br>• Worked in a team to ensure the timely completion of packing orders along with inventory management<br>• Trained new employees on the responsibilities of the position to ensure smooth operations</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2020 - June 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -103,7 +103,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arizona State University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Major in Computer Information Systems, minor in Psychology</div>
+                            <div>Major in Computer Information Systems, minor in Psychology, Certificate in Applied Business Analytics</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2019 - Present</span></div>
                     </div>
@@ -149,18 +149,25 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="devicon-python-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-git-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-gradle-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-html5-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-java-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-jira-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-jupyter-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-pandas-original"></i></li>
                         <li class="list-inline-item"><i class="devicon-numpy-original"></i></li>
+                        <li class="list-inline-item"><i class="devicon-python-plain"></i></li>                        
+                        <li class="list-inline-item"><i class="devicon-pandas-original"></i></li>
                         <li class="list-inline-item"><i class="devicon-photoshop-plain"></i></li>
+                        <li class="list-inline-item"><i class="devicon-spring-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-trello-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-vscode-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-jupyter-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-slack-plain"></i></li>
                     </ul>
+                    <div class="subheading mb-3">Certificates</div>
+                    <div>Microsoft Certified: Azure Fundamentals <br>•	Able to describe cloud concepts, Azure architecture and services, and Azure management and governance</div>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
