--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                         <span class="text-primary">Walulik</span>
                     </h1>
                     <div class="subheading mb-5">
-                        · Tempe · (602) 586-6172 ·
+                        Tempe · (602) 586-6172 ·
                         <a href="mailto:name@email.com">jwalulik@asu.edu</a>
                     </div>
-                    <p class="lead mb-5">I am a senior at Arizona State University studying Computer Information Systems. I am planning on pursuing a career in software engineering.</p>
+                    <p class="lead mb-5">I am a senior at Arizona State University studying Computer Information Systems. I am planning on pursuing a career in software engineering with a focus on backend development.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/joshuawalulik/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/joshuawalulik"><i class="fab fa-github"></i></a>
@@ -103,11 +103,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Arizona State University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Major in Computer Information Systems, minor in Psychology, Certificate in Applied Business Analytics</div>
+                            <p>• Major in Computer Information Systems, minor in Psychology, certificate in Applied Business Analytics<br>• Expected Graduation: May 8th, 2022</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2019 - Present</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Basis Scottsdale High School</h3>
                             <div class="subheading mb-3">High Honors</div>
@@ -126,8 +126,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Twitter Scrapping Project</h3>
                             <div class="subheading mb-3">Python</div>
-                            <div>• Wrote code that analyses tweets through the integration of Twitter's API<br>• Presented a PowerPoint slide show ultilizing the Python program that displays word frequency, sentiment, and location analysis through geospacial data</div>
-                            <p>• Link to <a href="https://github.com/joshuawalulik/Twitter-Scraper">GitHub</a></p>
+                            <p>• Wrote code that analyses tweets through the integration of Twitter's API<br>• Presented a PowerPoint slide show ultilizing the Python program that displays word frequency, sentiment, and location analysis through geospacial data<br>• Link to <a href="https://github.com/joshuawalulik/Twitter-Scraper">GitHub</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - November 2021</span></div>
                     </div>
@@ -136,7 +135,6 @@
                             <h3 class="mb-0">Portfolio Website</h3>
                             <div class="subheading mb-3">HTML & CSS</div>
                             <div>• Developed a website to display experience, interests, and skills<br>• Link to <a href="https://github.com/joshuawalulik/Portfolio-Site">GitHub</a></div>
-                            
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - January 2022</span></div>
                     </div>
@@ -147,34 +145,48 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="devicon-git-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-gradle-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-html5-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-java-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-jira-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-jupyter-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-numpy-original"></i></li>
-                        <li class="list-inline-item"><i class="devicon-python-plain"></i></li>                        
-                        <li class="list-inline-item"><i class="devicon-pandas-original"></i></li>
-                        <li class="list-inline-item"><i class="devicon-photoshop-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-spring-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-trello-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
-                        <li class="list-inline-item"><i class="devicon-vscode-plain"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Certificates</div>
-                    <div>Microsoft Certified: Azure Fundamentals <br>•	Able to describe cloud concepts, Azure architecture and services, and Azure management and governance</div>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development
-                        </li>
-                    </ul>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Programming Languages & Tools</h3>
+                            <ul class="list-inline dev-icons">
+                                <li class="list-inline-item"><i class="devicon-git-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-gradle-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-html5-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-java-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-jira-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-jupyter-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-numpy-original"></i></li>
+                                <li class="list-inline-item"><i class="devicon-python-plain"></i></li>                        
+                                <li class="list-inline-item"><i class="devicon-pandas-original"></i></li>
+                                <li class="list-inline-item"><i class="devicon-photoshop-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-spring-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-trello-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
+                                <li class="list-inline-item"><i class="devicon-vscode-plain"></i></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Certificates</h3>
+                            <div class="subheading mb-3">Microsoft Certified: Azure Fundamentals</div>
+                            <div>•	Able to describe cloud concepts, Azure architecture and services, and Azure management and governance</div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Workflow</h3>
+                            <div class="subheading mb-3">Agile Development</div>
+                            <ul class="fa-ul mb-0">
+                                <li>
+                                    <span class="fa-li"><i class="fas fa-check"></i></span>
+                                    SCRUM
+                                </li>
+                            </ul>
+                        </div>
+                    </div>  
                 </div>
             </section>
             <hr class="m-0" />
