--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <!-- Projects-->
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
-                    <h2 clas="mb-5">Projects</h2>
+                    <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Twitter Scrapping Project</h3>
@@ -199,6 +199,7 @@
                 </div>
             </section>
             <hr class="m-0" />
+        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
