--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     </div>
                     <p class="lead mb-5">I am a senior at Arizona State University studying Computer Information Systems. I am planning on pursuing a career in software engineering with a focus on backend development.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/joshuawalulik/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/joshuawalulik"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/joshuawalulik/" title = LinkedIn target ="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/joshuawalulik" title = GitHub target = "_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -126,7 +126,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Twitter Scrapping Project</h3>
                             <div class="subheading mb-3">Python</div>
-                            <p>• Wrote code that analyses tweets through the integration of Twitter's API<br>• Presented a PowerPoint slide show ultilizing the Python program that displays word frequency, sentiment, and location analysis through geospacial data<br>• Link to <a href="https://github.com/joshuawalulik/Twitter-Scraper">GitHub</a></p>
+                            <p>• Wrote code that analyses tweets through the integration of Twitter's API<br>• Presented a PowerPoint slide show ultilizing the Python program that displays word frequency, sentiment, and location analysis through geospacial data<br>• Link to <a href="https://github.com/joshuawalulik/Twitter-Scraper" title = GitHub target = "_blank">GitHub</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - November 2021</span></div>
                     </div>
@@ -134,7 +134,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Portfolio Website</h3>
                             <div class="subheading mb-3">HTML & CSS</div>
-                            <div>• Developed a website to display experience, interests, and skills<br>• Link to <a href="https://github.com/joshuawalulik/Portfolio-Site">GitHub</a></div>
+                            <div>• Developed a website to display experience, interests, and skills<br>• Link to <a href="https://github.com/joshuawalulik/Portfolio-Site" title = GitHub target = "_blank">GitHub</a></div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - January 2022</span></div>
                     </div>
