--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - January 2022</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Point of Sales Application</h3>
+                            <div class="subheading mb-3">Python</div>
+                            <div>• Developed a simple python point of sales application<br>• Allowed users to sell product, order product, and cancel transactions<br>• Link to <a href="https://github.com/joshuawalulik/Engage-Business-Online-App" title = GitHub target = "_blank">GitHub</a></div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2022</span></div>
+                    </div>
                 </div>
             <hr class="m-0" />
             </section>
@@ -149,22 +157,21 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Programming Languages & Tools</h3>
                             <ul class="list-inline dev-icons">
-                                <li class="list-inline-item"><i class="devicon-git-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-gradle-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-html5-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-intellij-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-java-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-jira-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-jupyter-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-mysql-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-numpy-original"></i></li>
-                                <li class="list-inline-item"><i class="devicon-python-plain"></i></li>                        
-                                <li class="list-inline-item"><i class="devicon-pandas-original"></i></li>
-                                <li class="list-inline-item"><i class="devicon-photoshop-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-spring-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-trello-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-visualstudio-plain"></i></li>
-                                <li class="list-inline-item"><i class="devicon-vscode-plain"></i></li>
+                                <li class="list-inline-item" title = CSS3><i class="devicon-css3-plain"></i></li>
+                                <li class="list-inline-item" title = Git><i class="devicon-git-plain"></i></li>
+                                <li class="list-inline-item" title = Gradle><i class="devicon-gradle-plain"></i></li>
+                                <li class="list-inline-item" title = HTML5><i class="devicon-html5-plain"></i></li>
+                                <li class="list-inline-item" title = Java><i class="devicon-java-plain"></i></li>
+                                <li class="list-inline-item" title = JavaScript><i class="devicon-javascript-plain"></i></li>
+                                <li class="list-inline-item" title = Jira><i class="devicon-jira-plain"></i></li>
+                                <li class="list-inline-item" title = JQuery><i class="devicon-jquery-plain"></i></li>
+                                <li class="list-inline-item" title = MySQL><i class="devicon-mysql-plain"></i></li>
+                                <li class="list-inline-item" title = NodeJS><i class="devicon-nodejs-plain"></i></li>
+                                <li class="list-inline-item" title = NPM><i class="devicon-npm-original-wordmark"></i></li>
+                                <li class="list-inline-item" title = Numpy><i class="devicon-numpy-original"></i></li>
+                                <li class="list-inline-item" title = Python><i class="devicon-python-plain"></i></li>                        
+                                <li class="list-inline-item" title = Pandas><i class="devicon-pandas-original"></i></li>
+                                <li class="list-inline-item" title = Spring><i class="devicon-spring-plain"></i>
                             </ul>
                         </div>
                     </div>
