--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certificates">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 </ul>
             </div>
@@ -177,13 +178,6 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Certificates</h3>
-                            <div class="subheading mb-3">Microsoft Certified: Azure Fundamentals</div>
-                            <div>•	Able to describe cloud concepts, Azure architecture and services, and Azure management and governance</div>
-                        </div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">Workflow</h3>
                             <div class="subheading mb-3">Agile Development</div>
                             <ul class="fa-ul mb-0">
@@ -197,6 +191,28 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <!-- Certificates-->
+            <section class="resume-section" id="certificates">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Certificates</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Microsoft Certified: Azure Fundamentals</h3>
+                            <div class="subheading mb-3">Cloud Development</div>
+                            <p>• Able to describe cloud concepts, Azure architecture and services, and Azure management and governance</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Fortinet: NSE 1 Network Security Associate</h3>
+                            <div class="subheading mb-3">Network Security</div>
+                            <p>• Able to describe basic terms and concepts of cybersecurity for personal and business use</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2022</span></div>
+                    </div>
+                </div>
+            </section>
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
